workspace-sf/force-app/main/default/objects/RamoGarantia__c/RamoGarantia__c.object-meta.xml
<CustomObject>
    <description>Objeto de relacionamento entre a garantia e o ramo</description>
    <label>Ramo da garantia</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ramos da garantia</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>