workspace-sf/force-app/main/default/objects/RamoGarantia__c/fields/CodigoRamo__c.field-meta.xml
<CustomField>
    <fullName>CodigoRamo__c</fullName>
    <label>Código do ramo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>