workspace-sf/force-app/main/default/objects/RamoGarantia__c/fields/NomeRamo__c.field-meta.xml
<CustomField>
    <fullName>NomeRamo__c</fullName>
    <label>Nome do ramo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>