workspace-sf/force-app/main/default/objects/RamoGarantia__c/fields/RamoSeguro__c.field-meta.xml
<CustomField>
    <fullName>RamoSeguro__c</fullName>
    <label>Ramo de seguro</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RamoSeguro__c.Status__c</field>
            <operation>equals</operation>
            <value>Ativo</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RamoSeguro__c</referenceTo>
    <relationshipLabel>Ramos da garantia</relationshipLabel>
    <relationshipName>RamosGarantia</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>