workspace-sf/force-app/main/default/objects/RamoGarantia__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Garantia__c</columns>
    <columns>RamoSeguro__c</columns>
    <columns>CodigoRamo__c</columns>
    <columns>NomeRamo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>